# harbor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-deploy.yml  release.yml
.shipwright-out/: harbor.yaml  state.py
.shipwright-out/tests/: test_smoke.py
0.3/: 404.html  index.html  objects.inv  sitemap.xml
0.3/concepts/: index.html
0.3/engine/: index.html
0.3/getting-started/: index.html
0.3/how-to/: index.html
0.3/knowledge/: index.html
0.3/search/: search_index.json
0.3/tutorials/: index.html
demos/: CATALOG.md  README.md  __init__.py
demos/agents/: CATALOG.md
demos/code-graph/: code-graph.md
demos/cve-remediation/: cve-rem-graph.md  cve-rem-pipeline.md  pipeline-graph.md
demos/everything-demo/: README.md
demos/flows/: CATALOG.md
demos/governors/: CATALOG.md
demos/internal-docs-qa/: internal-docs-qa.md
demos/knowledge/: CATALOG.md
demos/machine-learning/: CATALOG.md
demos/pr-review/: pr-review.md
demos/pv-case-manager/: pv-case-manager.md
demos/regwatch/: regwatch.md
demos/soc-triage/: soc-triage.md
demos/support-veto/: support-veto.md
demos/tools/: CATALOG.md
design-docs/: harbor-adrs.md  harbor-design.md  harbor-dir-plugins.md  harbor-facts.md  harbor-forward-compat.md  harbor-md-skills.md  harbor-plugin-api.md  harbor-roadmap.md
docs/: getting-started.md  index.md
docs/concepts/: index.md  ir.md  plugins.md  provenance.md
docs/engine/: checkpointer.md  counterfactual.md  index.md  replay.md
docs/explanation/: fathom-gaps.md  versioning.md
docs/guides/: air-gap-deployment.md
docs/how-to/: add-mcp-server.md  add-nautilus-source.md  add-rule-pack.md  add-store-provider.md  add-trigger.md  bosun-pack.md  build-agent.md  build-graph.md  build-skill.md  checkpointer.md  index.md  write-tool-plugin.md
docs/knowledge/: air-gap.md  cypher-subset.md  index.md  memory.md  reference-skills.md  retrieval.md  skills.md  stores.md
docs/reference/: cli.md  hookspecs.md  ir-schema.md  openapi.json  plugin-manifest.md  signing.md  skills.md  tools.md  v1-limits.md
docs/security/: sign-off.md  threat-model.md
docs/serve/: api.md  artifacts.md  bosun.md  cli.md  hitl.md  nautilus.md  overview.md  profiles.md  runs.md  scheduler.md  triggers.md  ws.md
docs/tutorials/: agent-with-retrieval.md  fathom-rules.md  first-graph.md  hitl-graph.md  index.md  ml-node-graph.md  serve-and-replay.md
docs/validation/: cve-pipeline-report.md
scripts/: build_draft7.py  check_changelog_touched.py  check_spdx.py  check_version_sync.py  cve_production_deployment.sh  gen_cve_cf_diffs.py  lineage_audit.py  regen_openapi.py  regen_schemas.py  shipwright_run.py  sign_bosun_packs.py
src/harbor/: __init__.py
tests/: conftest.py
tests/fixtures/: 100-node-ir.yaml  cve_triage.yaml  cve_triage_no_nautilus.yaml  cve_triage_real_nautilus.yaml  cve_triage_stub_broker.yaml  dspy-cassette.yaml  mutation.yaml  nautilus_stub.py  onnx_minimal.onnx  pii_corpus.txt  sample-graph-phase3.yaml  sample-graph-phase4.yaml  sample-graph-phase5.yaml  sample-graph.yaml  sample_state.py  sklearn_minimal.joblib  stub_mcp_server.py  training-subgraph.yaml  xgboost_minimal.ubj
tests/integration/: test_autoresearch_provenance_end_to_end.py  test_autoresearch_reference_skill.py  test_branch_lifecycle_facts.py  test_capability_default_deny.py  test_cli_counterfactual.py  test_cli_inspect.py  test_cli_run.py  test_clips_facts_roundtrip.py  test_consolidation_cadence_batch.py  test_consolidation_cadence_streaming.py  test_consolidation_provenance_lineage.py  test_consolidation_salience_gating.py  test_consolidation_typed_delta.py  test_counterfactual_diff.py  test_counterfactual_e2e.py  test_counterfactual_invariant.py  test_custom_store_provider.py  test_cypher_subset.py  test_cypher_write_keyword_scan.py  test_determinism_shim.py  test_dspy_adapter_basic.py  test_dspy_bind.py  test_dspy_loud_fallback.py  test_embed_hash_drift_gate.py  test_episodic_widening_read.py  test_factstore_fathom_provenance.py  test_health_warns_on_nfs.py  test_hybrid_search_rrf.py  test_interrupt_timeout.py  test_jsonl_audit_log.py  test_kg_fact_promotion_rule.py  test_kg_promotion_counterfactual.py  test_knowledge_phase3_ve.py  test_knowledge_phase5_final.py  test_knowledge_poc_e2e.py  test_kuzu_bulk_copy_extension_api.py  test_kuzu_provider.py  test_lancedb_provider.py  test_lancedb_versioning_checkpoint.py  test_mcp_stdio_adapter.py  (+46 more)
tests/migration/: test_foundation_v0_1_to_engine_v0_2.py
tests/perf/: test_knowledge_perf.py  test_nautilus_workload.py  test_per_node_overhead.py  test_sqlite_checkpoint.py  test_structural_hash_perf.py
tests/property/: __init__.py  test_cypher_linter_idempotent.py  test_ir_roundtrip.py  test_jcs_canonical.py  test_merge_strategy_associativity.py  test_provenance_roundtrip.py  test_rrf_fusion_idempotent.py  test_salience_formula_bounds.py  test_salience_recency_monotone.py  test_slot_regex_evasion.py  test_structural_hash_jcs_stable.py
tests/regression/: __init__.py  pydantic_issues.py
tests/replay/: __init__.py  test_determinism_sweep.py  test_must_stub_policy.py  test_react_must_stub_llm.py  test_replay_determinism.py
tests/unit/: __init__.py  test_action_vocabulary.py  test_capabilities.py  test_capability_string_binding.py  test_check_pack_compat.py  test_checkpoint_protocol.py  test_confidence_decay_formula.py  test_counterfactual_mutation.py  test_cross_encoder_reranker.py  test_cypher_linter_allowlist.py  test_cypher_linter_banlist.py  test_cypher_linter_unbounded_varlength_rejected.py  test_derived_graph_hash.py  test_embed_hash_payload.py  test_env_interpolation.py  test_errors.py  test_errors_walker.py  test_event_vocabulary.py  test_fathom_adapter.py  test_fathom_provenance.py  test_foundation_extensions.py  test_graph_definition.py  test_graph_run.py  test_graphstore_expand_bounds.py  test_ir_backfill.py  test_ir_dumps.py  test_ir_dumps_walker.py  test_ir_ids.py  test_ir_mirror.py  test_ir_models.py  (+49 more)
(+635 files in other folders)
